# mcbot-zbot

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml  settings.py
commands/: __init__.py  alerts.py  myself.py  nodes.py  testing.py
models/colomesh/: node.py
