[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "mcbot",
    "python-dateutil>=2.9.0.post0",
]

[tool.uv.sources]
mcbot = { git = "https://github.com/zevaryx/mcbot.git", rev = "dev" }

[tool.pyright]
typeCheckingMode = "basic"
